--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,9 @@
 /dist
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
