--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@svgr/webpack": "^6.5.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -90,9 +93,13 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-css-modules-transform": "^4.4.2",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^13.1.0",
     "sass": "^1.76.0",
     "sass-loader": "^12.4.0",
+    "ts-jest": "^29.2.6",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
@@ -106,7 +113,8 @@
     "build": "webpack --define-process-env-node-env production --config config/webpack.prod.js",
     "serve:w": "webpack --mode development --config config/webpack.dev.js --watch && serve ./dist/",
     "lint": "eslint --ext \".js,.ts,.tsx\" --ignore-path .gitignore .",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": [
