--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dnd-core": "^16.0.1",
     "html-react-parser": "^3.0.12",
     "http-status-codes": "^2.2.0",
+    "i18next": "^22.4.9",
+    "i18next-browser-languagedetector": "^8.0.4",
     "leaflet": "^1.9.3",
     "leaflet-boundary-canvas": "^1.0.0",
     "leaflet-gesture-handling": "^1.2.2",
@@ -37,6 +39,7 @@
     "react-draggable": "^4.4.5",
     "react-ga4": "^2.1.0",
     "react-google-recaptcha": "^2.1.0",
+    "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
     "react-idle-timer": "^4.6.4",
     "react-image-size": "^2.0.0",
